--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "hint": "^7.1.3",
+    "x-content-type-options": "nosniff",
     "vite": "^3.2.3"
   },
   "dependencies": {
